# Weather-in-points

./: CMakeLists.txt  MapDialog.qml  PointDelegate.qml  PointDialog.qml  README.md  SaveLoadData.qml  backendnetworking.cpp  backendnetworking.h  main.cpp  main.qml  notificationclient.cpp  notificationclient.h  qml.qrc  qtandroidservice.cpp  qtandroidservice.h  qtquickcontrols2.conf
android/: AndroidManifest.xml  build.gradle  google-services.json  gradle.properties
android/src/org/ArtemNosenko/WeatherInPoints/: DbHelper.java  HTTPrequestHelper.java  MyStartServiceReceiver.java  NotificationClient.java  QtAndroidService.java
